--- a/main.html
+++ b/main.html
@@ -4,7 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS List of Questions</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      padding: 20px;
+      background-color: #f0f0f0;
+    }
+
+    .questions {
+      background-color: #f8fffe;
+      height: 50px;
+      margin-top: 20px;
+      padding: 15px;
+      max-width: 600px;
+      border-left: 8px solid green;
+    }
+  </style>
 </head>
 <body>
   <blockquote class="questions">
