--- a/main.html
+++ b/main.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Questions</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Question List</title>
+    <style>
+        .questions {
+            background-color: #f8fffe;
+            height: 50px;
+            margin-top: 20px;
+            padding: 15px;
+            max-width: 600px;
+            border-left: 8px solid green;
+        }
+    </style>
 </head>
 <body>
-  <blockquote class="questions">
-    <p>Who was the first female to become the governor of an Indian state?</p>
-  </blockquote>
-  <blockquote class="questions">
-    <p>Who among the first woman to climb Mount Everest twice?</p>
-  </blockquote>
-  <blockquote class="questions">
-    <p>Who is the President of India?</p>
-  </blockquote>
+    <blockquote class="questions">
+        <p>Who was the first female to become the governor of an Indian state?</p>
+    </blockquote>
+    <blockquote class="questions">
+        <p>Who among first Woman to climb Mount Everest twice?</p>
+    </blockquote>
+    <blockquote class="questions">
+        <p>Who is President of India?</p>
+    </blockquote>
 </body>
 </html>
